Fixed routerLink issues

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -11,10 +11,10 @@
         <button class="bg-slate-400 p-2 rounded-r text-white outline-none outline-0">Search</button>
     </div>
     <div class="nav-items">
-        <span class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Login</span>
-        <span class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Register</span>
+        <span routerLink="/login" class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Login</span>
+        <span routerLink="/register" class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Register</span>
         <span class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Cart</span>
         <span class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Welcome User</span>
-        <span class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Logout</span>
+        <span routerLink="/login" class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Logout</span>
     </div>
 </nav>
