--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,17 +1,18 @@
 <div class="lg:w-4/12 mt-10 mb-10 p-10 shadow-lg mx-auto">
     <h3 class="text-3xl text-center font-semibold py-5">Login</h3>
-    <form class="flex flex-col">
+    <form [formGroup]="loginForm" class="flex flex-col">
         <div class="flex flex-col mt-4 mb-1">
-            <input type="text" placeholder="UserName" class="p-2 border border-gray-300 rounded">
-            <span class="text-red-500 text-sm">*UserName is required</span>
+            <input formControlName="email" type="text" placeholder="Email" class="p-2 border border-gray-300 rounded">
+            <span *ngIf="loginForm.hasError('required', 'email') && loginForm.controls['email'].dirty" class="text-red-500 text-sm">*Email is required</span>
         </div>
         <div class="flex flex-col mt-4 mb-1">
-            <input type="text" placeholder="Password" class="p-2 border border-gray-300 rounded">
-            <span class="text-red-500 text-sm">*Password is required</span>
+            <input formControlName="password" type="text" placeholder="Password" class="p-2 border border-gray-300 rounded">
+            <span *ngIf="loginForm.hasError('required', 'password') && loginForm.controls['password'].dirty" class="text-red-500 text-sm">*Password is required</span>
         </div>
-        <button class="bg-indigo-500 p-2 rounded mt-3 text-white">Submit</button>
-    </form>
+        <button [class.disabled] = "loginForm.invalid" class="bg-indigo-500 p-2 rounded mt-3 text-white" 
+        (click)="login()">Submit</button>
+        </form>
     <div class="flex justify-center mt-5">
-        <span>Don't Have Account?</span><a class="text-indigo-600 ml-2 cursor-pointer">SignUp Here</a>
+        <span>New to BookMyBook?</span><a routerLink="/register" class="text-indigo-600 ml-2 cursor-pointer">Register Here</a>
     </div>
 </div>
