--- a/client/src/app/pages/register/register.component.html
+++ b/client/src/app/pages/register/register.component.html
@@ -27,9 +27,10 @@
             <span *ngIf="registerForm.hasError('confirmPasswordValidator', 'confirmPassword')" 
             class="text-red-500 text-sm">*Password didn't matched!</span>
         </div>
-        <button [class.disabled] = "registerForm.invalid" class="bg-indigo-500 p-2 rounded mt-3 text-white" (click)="register()">Submit</button>
+        <button [class.disabled] = "registerForm.invalid" class="bg-indigo-500 p-2 rounded mt-3 text-white" 
+        (click)="register($event)">Submit</button>
     </form>
     <div class="flex justify-center mt-5">
-        <span>Already Have Account?</span><a class="text-indigo-600 ml-2 cursor-pointer">Login Here</a>
+        <span>Already Have Account?</span><a routerLink="/login"   class="text-indigo-600 ml-2 cursor-pointer">Login Here</a>
     </div>
 </div>
