--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -12,7 +12,8 @@
         <button [class.disabled] = "loginForm.invalid" class="bg-indigo-500 p-2 rounded mt-3 text-white" 
         (click)="login()">Login</button>
         </form>
-    <div class="flex justify-center mt-5">
-        <span>New to BookMyBook?</span><a routerLink="/register" class="text-indigo-600 ml-2 cursor-pointer">Register Here</a>
+    <div class="flex justify-between mt-5">
+        <a routerLink="/forget-password" class="text-indigo-600 ml-2 cursor-pointer">Forget Password?</a>
+        <a routerLink="/register" class="text-indigo-600 ml-2 cursor-pointer">Create Account</a>
     </div>
 </div>
