--- a/client/src/app/pages/reset/reset.component.html
+++ b/client/src/app/pages/reset/reset.component.html
@@ -1,1 +1,21 @@
-<p>reset works!</p>
+<div class="lg:w-4/12 mt-10 mb-5 p-10 shadow-lg mx-auto">
+    <h3 class="text-3xl text-center font-semibold py-5">Reset Your Password</h3>
+    <form [formGroup]="resetForm" class="flex flex-col">
+        <span class="mb-2">
+            Please use strong password.
+        </span>
+        <div class="flex flex-col mt-4 mb-1">
+            <input formControlName="password" type="text" placeholder="Password" class="p-2 border border-gray-300 rounded">
+            <span *ngIf="resetForm.hasError('required', 'password') && resetForm.controls['password'].dirty" class="text-red-500 text-sm">*Password is required</span>
+        </div>
+        <div class="flex flex-col mt-4 mb-1">
+            <input formControlName="confirmPassword" type="text" placeholder="Confirm Password" class="p-2 border border-gray-300 rounded">
+            <span *ngIf="resetForm.hasError('required', 'confirmPassword') && resetForm.controls['confirmPassword'].dirty" 
+            class="text-red-500 text-sm">*Confirm Password is required</span>
+            <span *ngIf="resetForm.hasError('confirmPasswordValidator', 'confirmPassword')" 
+            class="text-red-500 text-sm">*Password didn't matched!</span>
+        </div>
+        <button [class.disabled] = "resetForm.invalid" class="bg-indigo-500 p-2 rounded mt-3 text-white" 
+        (click)="reset()">Submit</button>
+    </form>
+</div>
