--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -4,17 +4,22 @@
             BookMyBook
         </span>
     </div>
-    <div class="search relative">
+    <div *ngIf="isLoggedIn" class="search relative">
         <span class="absolute mt-1.5 mx-3"><i class="fa-solid fa-magnifying-glass"></i></span>
         <input type="text" placeholder="Search Book" 
         class="w-96 p-2 pl-9 rounded rounded-r-none text-gray-600">
         <button class="bg-slate-400 p-2 rounded-r text-white outline-none outline-0">Search</button>
     </div>
     <div class="nav-items">
-        <span routerLink="/login" class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Login</span>
-        <span routerLink="/register" class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Register</span>
-        <span class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Cart</span>
-        <span class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Welcome User</span>
-        <span routerLink="/login" class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Logout</span>
+        <ng-container *ngIf="!isLoggedIn">
+            <span routerLink="/register" class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Register</span>
+            <span routerLink="/login" class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Login</span>
+        </ng-container>
+        <ng-container *ngIf="isLoggedIn">
+            <span class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Cart</span>
+            <span class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Welcome User</span>
+            <span routerLink="/login" (click)="logout()"
+            class="text-xl cursor-pointer text-gray-200 font-light m-3 hover:font-bold hover:indigo-text-200">Logout</span>
+        </ng-container>
     </div>
 </nav>
