--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<h4 class="text-4xl text-center mt-10 font-bold">Welcome to BookMYBook</h4>
+<h4 class="mt-10 text-4xl font-bold text-center">Welcome to BookMYBook</h4>
+
+<div class="container grid grid-cols-3 mx-auto">
+  <ng-container *ngFor="let book of books">
+    <app-book-card [book]="book" />
+  </ng-container>
+
+</div>
